--- a/demoAssets/style.css
+++ b/demoAssets/style.css
@@ -6,9 +6,12 @@ body {
   background-color: #eceff1;
 }
 
-code {
-  font-size: 18px;
+@media (min-width: 600px) {
+  code {
+    font-size: 18px;
+  }
 }
+
 
 p {
   font-size: 16px;
@@ -26,6 +29,10 @@ nav .brand-logo {
   margin: 0 auto;
   max-width: 720px;
   padding: 36px;
+}
+
+#firstSection .card-content {
+  height: 300px;
 }
 
 .card {
